<resources>
    <string name="app_name">Java android class</string>
    <string name="textView">textView</string>
    <string name="editText">editText</string>
    <string name="button">button</string>
    <string name="raz">RAZ</string>
    <string name="imc">Calculer l\'IMC</string>
    <string name="taille">taille </string>
    <string name="poids">Poids </string>
    <string name="m_tre">Mètre</string>
    <string name="centim_tre">Centimètre</string>
    <string name="mega_fonction">Mega fonction !</string>
    <string name="poidstxt">Poids :</string>
    <string name="tailletxt">Taille :</string>
</resources>
